--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,7 @@
 .app__footer {
   box-shadow: 0 -10px 20px #a3a3a3;
   border-radius: 15px 15px 0 0;
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-around;
 }
